--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ div {
     display: block;
 }
 body {
-    background: linear-gradient(to right, #e4db19, #b09b71); */ */
+    background: linear-gradient(to right, #e4db19, #b09b71);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 html {
